--- a/_posts/2025-02-27-250227-TIL.md
+++ b/_posts/2025-02-27-250227-TIL.md
@@ -34,6 +34,52 @@ tags: [TIL, Java] # add tag
 
 ### 기록
 
+ㅡ
+
+bundle exec jekyll serve --baseurl=""
+
+url: "https://le951.github.io" 부분은 바꾸지 않아도 자동으로 적용 되는구나.
+
+
+Gemfile에 github pages 추가하니 오류나네.
+
+PS C:\Users\Lee\Documents\Git\blog> jekyll serve --baseurl="localhost:4000"\
+C:/tools/Ruby33-x64/lib/ruby/3.3.0/bundler/runtime.rb:299:in `check_for_activated_spec!': You have already activated public_suffix 6.0.1, but your Gemfile requires public_suffix 5.1.1. Prepending `bundle exec` to your command may solve this. (Gem::LoadError)
+
+bundle exec로 강제실행.
+
+ㅡ
+
+index.html만 로딩되고, css, assets 로딩 X 오류.
+
+GET https://le951.github.io/assets/css/main.css net::ERR_ABORTED 404 (Not Found)
+
+https://le951.github.io/blog/assets/... 로 가야 하는데, 오류.
+
+원인 : baseurl / url 설정 오류\
+난 고쳐서 올린 줄 알았는데 push가 실패했었나?\
+아 씨, vscode에서 commit 해볼 때 commit message에 그냥 스페이스바 눌러서 그랬나보네. 안되면 안된다고 말을 하던가.
+
+baseurl: "/blog"
+url: "https://le951.github.io"
+
+
+아니 이거 고치면 되는건데 난 그것도 모르고\
+jekyll 그대로 올리면 적용 안되나~ 해서 
+
+Github Action을 쓰거나, 빌드된 파일을 올리거나 해야하나.
+
+단순히 branch checkout 하는건 골때리는데. 순서를 한 번 그려봐야 하나.\
+checkout - merge(pull)? - push - checkout
+
+뭐 이런 메모나 남기고 있었는데.
+
+왜 되는거지? jekyll이?
+
+github pages가 jekyll 감지하고 알아서 빌드 해주는건가?
+
+<hr>
+
 - 2753. 윤년
 
 ```
