--- a/_posts/2025-02-27-250227-TIL.md
+++ b/_posts/2025-02-27-250227-TIL.md
@@ -23,6 +23,7 @@ tags: [TIL, Java] # add tag
     - Github Pages 호스팅
     - 글 폴더 분리 / 비공개 글 (링크전용 / 별도 로딩)
     - utterances 레이아웃 조절
+    - 제목 기반 날짜 설정에서 내용 기반 날짜 설정으로. 아니면 제목 날짜까지 링크에 더하거나. TIL 중복 이름 쓰니까 링크가 겹치네.
 
 - 백준 문제풀이
 
@@ -80,7 +81,7 @@ github pages가 jekyll 감지하고 알아서 빌드 해주는건가?
 
 <hr>
 
-- 2753. 윤년
+- 2753\. 윤년
 
 ```
     if (year % 4 == 0) {
@@ -101,18 +102,20 @@ github pages가 jekyll 감지하고 알아서 빌드 해주는건가?
 이래도 작동이야 될텐데. 뭐가 더 간결할까.
 
 if return? 이건 함수여야 하잖아.
+
 ```
     if (year % 400 == 0) System.out.println(1);
     else if (year % 100 == 0) System.out.println(0);
     else if (year % 4 == 0) System.out.println(1);
     else System.out.println(0);
 ```
+
 <hr>
 
-- 14681. 사분면 고르기
+- 14681\. 사분면 고르기
 
-    // x y != 0
 ```
+    // x y != 0
     if (x>0 && y>0) System.out.println("1");
     else if (x>0 && y<0) System.out.println("4");
     else if (x<0 && y>0) System.out.println("2");
@@ -124,7 +127,7 @@ if return? 이건 함수여야 하잖아.
 
 <hr>
 
-- 2884. 알람 시계
+- 2884\. 알람 시계
 
 ```
     int h = sc.nextInt();
@@ -155,9 +158,11 @@ For example, floorDiv(-4, 3) == -2, whereas (-4 / 3) == -1.
     m = Math.floorMod(m, 60);
     System.out.println(h + " " + m);
 ```
+
 <hr>
 
-2525. 오븐 시계
+- 2525\. 오븐 시계
+
 ```
     int current_h = sc.nextInt();
     int current_m = sc.nextInt();
@@ -180,7 +185,7 @@ For example, floorDiv(-4, 3) == -2, whereas (-4 / 3) == -1.
 
 <hr>
 
-2480. 주사위 세 개
+- 2480\. 주사위 세 개
 
 ```
     int spot_1 = sc.nextInt();
@@ -195,7 +200,7 @@ For example, floorDiv(-4, 3) == -2, whereas (-4 / 3) == -1.
 
 <hr>
 
-- 25314. 코딩은 체육과목 입니다.
+- 25314\. 코딩은 체육과목 입니다.
 
 ```
     import java.util.Scanner;
@@ -218,6 +223,7 @@ For example, floorDiv(-4, 3) == -2, whereas (-4 / 3) == -1.
 Math.ceilDiv가 백준 자바에는 없음.
 
 ceil 사용
+
 ```
 int l = (int) Math.ceil(b/4d);
 ```
@@ -228,7 +234,7 @@ int l = (int) Math.ceil(b/4d);
 
 <hr>
 
-- 15552. 빠른 A+B
+- 15552\. 빠른 A+B
 
 아래는 문제 원문 내용 발췌
 
@@ -294,8 +300,8 @@ int l = (int) Math.ceil(b/4d);
 
 ㅡ
 
-- 11021. A+B - 7
-- 11022. A+B - 8
+- 11021\. A+B - 7
+- 11022\. A+B - 8
 
 ```
     for(int i = 0; i < loop; i++ ) {
@@ -309,7 +315,7 @@ int l = (int) Math.ceil(b/4d);
 
 <hr>
 
-- 2438. 별 찍기 - 1
+- 2438\. 별 찍기 - 1
 
 ```
     int loop = Integer.parseInt(br.readLine());
@@ -331,7 +337,7 @@ j < i+1 할까 고민하다가 위에 write 하나 추가.
 
 <hr>
 
-- 2439. 별 찍기 - 2
+- 2439\. 별 찍기 - 2
 
 ```
     for (int i = 0; i < loop; i++) {
@@ -352,7 +358,7 @@ j < i+1 할까 고민하다가 위에 write 하나 추가.
 
 <hr>
 
-- 10952. A + B - 5
+- 10952\. A + B - 5
 
 몇 가지 방법이 떠오른다.
 
