--- a/_posts/2025-06-09-Whisper.md
+++ b/_posts/2025-06-09-Whisper.md
@@ -29,9 +29,9 @@ medium을 GPU로 처리 시 VRAM 8GB가 요구된다. (기본 옵션 기준)
 
 Windows powershell (Windows Terminal) 기준 작성
 
-- python 설치 필요. https://www.python.org/downloads/
-- ffmpeg 설치 필요. https://www.gyan.dev/ffmpeg/builds/ (다운로드 후 환경변수 설정 필요. 하단 트러블 슈팅 참고)
-<p>
+python 설치 필요. https://www.python.org/downloads/
+ffmpeg 설치 필요. https://www.gyan.dev/ffmpeg/builds/ (다운로드 후 환경변수 설정 필요. 하단 트러블 슈팅 참고)
+
 
     // Python 가상환경
     python -m venv .venv // python 가상환경 생성
@@ -56,7 +56,6 @@ Windows powershell (Windows Terminal) 기준 작성
 
     // whisper 실행
     python -m whisper ".\2025-05-01 10-00-00.mkv" --language Korean --model small --device cuda // -m : module whisper를 명령줄에서 바로 실행
-</p>
 
 대량으로 실행하는 경우 .py / .ps1 만들어 사용하는 것을 추천
 
